--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,33 @@
   flex-direction: "column";
   justify-content: "space-between";
 }
+
+* {
+  scrollbar-color: #000 #2B2B2B;
+  scrollbar-width: thin;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  background-color: #2B2B2B;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #000;
+  border-radius: 9em;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #4e4e4e;
+}
+
+/* Стрелки */
+
+::-webkit-scrollbar-button:vertical:start:decrement {
+  display: none;
+}
+
+::-webkit-scrollbar-button:vertical:end:increment {
+  display: none;
+}
