--- a/src/Stylesheets/MainPage.css
+++ b/src/Stylesheets/MainPage.css
@@ -26,11 +26,16 @@
 .sidebar-menu-item {
   font-family: Roboto;
   font-style: normal;
-  font-weight: 350;
+  font-weight: 300;
   font-size: 12px;
   line-height: 14px;
   padding: 15px 0;
   letter-spacing: 0.666667px;
+  cursor: pointer;
+}
+
+.sidebar-menu-item-active {
+  font-weight: 500;
 }
 
 .sidebar-menu-item:first-child {
@@ -88,6 +93,7 @@
   text-align: right;
   letter-spacing: 0.6px;
   margin-bottom: 15px;
+  cursor: pointer;
 }
 
 .dropdown-menu-item:last-child {
